# scaffolder

./: .gitignore  LICENSE  README.md  pyproject.toml  template.yaml
output/root/dir1/subdir/: file3.txt
src/scaffolder/: main.py
src/scfldr/: main.py
src/scfldr/templates/: __init__.py  basic.yaml  python_package.yaml  streamlit.yaml  web.yaml
