[project]
name = "scfldr"
version = "0.1.5"
description = "A command-line tool to generate folder and file structures from YAML templates"
readme = "README.md"
authors = [
    { name = "utkarshg1", email = "gaikwadujg@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "aiofiles>=24.1.0",
    "pyyaml>=6.0.2",
    "typer>=0.15.4",
    "rich>=13.0.0",
]
license = { text = "MIT" }
keywords = ["scaffolding", "generator", "template", "cli", "directory-structure", "project-templates"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Software Development :: Code Generators",
]

[project.urls]
"Homepage" = "https://github.com/utkarshg1/scfldr"
"Bug Tracker" = "https://github.com/utkarshg1/scfldr/issues"
"Documentation" = "https://github.com/utkarshg1/scfldr/blob/main/README.md"

[project.scripts]
scfldr = "scfldr.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
